--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
 members = [
-    "src/entry",
-
-    "src/frontend",
-
     "src/backend",
+    "src/types",
+]
+exclude = [
+    "src/frontend",
 ]
