--- a/src/types/Cargo.toml
+++ b/src/types/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "frontend"
+name = "types"
 version = "0.1.0"
 authors = ["Jaakko Hannikainen <jaakko.hannikainen@solita.fi>"]
 edition = "2018"
 
 [dependencies]
-yew = "0.8.0"
-log = "0.4"
-web_logger = "0.1"
-stdweb = "0.4"
+serde = { version = "1.0.60", features = ["derive"]}
+serde_json = "1.0.40"
