--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -17,3 +17,4 @@ r2d2 = "0.8"
 r2d2_postgres = "0.14.0"
 futures = "0.1"
 types = { path="../types" }
+uuid = { version = "0.8", features = ["v4", "serde"]}
