--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jaakko Hannikainen <jaakko.hannikainen@solita.fi>"]
 edition = "2018"
 
 [dependencies]
+frank_jwt = "3.1.2"
 gotham = "0.4.0"
 gotham_derive = "0.4.0"
 postgres = "0.15.2"
